fix typos on fields names in swagger and code to retreive proper IDs + fix cscli decisions command
