# cmd/api/test_write/main.go
@@ -93,15 +93,15 @@ func (m *Machine) CreateAlert() *models.Alert {
 	scope := "ip"
 	decisionType := "ban"
 	decision := &models.Decision{
-		DecisionID: guid.String(),
-		Duration:   &duration,
-		EndIP:      endIP,
-		StartIP:    startIP,
-		Origin:     &origin,
-		Scenario:   &scenario,
-		Scope:      &scope,
-		Target:     &ipAddr,
-		Type:       &decisionType,
+		ID:       guid.String(),
+		Duration: &duration,
+		EndIP:    endIP,
+		StartIP:  startIP,
+		Origin:   &origin,
+		Scenario: &scenario,
+		Scope:    &scope,
+		Target:   &ipAddr,
+		Type:     &decisionType,
 	}
 
 	events := []*models.Event{}
@@ -134,7 +134,7 @@ func (m *Machine) CreateAlert() *models.Alert {
 	stopAt := time.Now().Format(time.RFC3339)
 
 	alert := &models.Alert{
-		AlertID:         xid.New().String(),
+		ID:              xid.New().String(),
 		Capacity:        &capacity,
 		Decisions:       []*models.Decision{decision},
 		Events:          events,
