# pkg/models/add_decision_response.go
@@ -1,43 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// AddDecisionResponse AddDecisionResponse
-//
-// swagger:model AddDecisionResponse
-type AddDecisionResponse struct {
-
-	// decision id
-	DecisionID string `json:"decision_id,omitempty"`
-}
-
-// Validate validates this add decision response
-func (m *AddDecisionResponse) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *AddDecisionResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *AddDecisionResponse) UnmarshalBinary(b []byte) error {
-	var res AddDecisionResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
